--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,9 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+EditorStartupMap=/Game/MainContent/Levels/Test_Level.Test_Level
+GlobalDefaultGameMode=/Game/MainContent/GameData/GM_MainGame.GM_MainGame_C
+GameInstanceClass=/Game/MainContent/GameData/GI_MainInstance.GI_MainInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -41,9 +44,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
-r.Shadow.Virtual.Enable=1
+r.DynamicGlobalIlluminationMethod=0
+r.ReflectionMethod=0
+r.Shadow.Virtual.Enable=0
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
